# slideo

./: .env  BACKGROUND.md  Cargo.toml  README.md  slideo-dev.db  test.db  test.db-shm  test.db-wal
.github/workflows/: ci.yml  release.yml
ci/: README.md  install-macos-brew.sh  setup-env.sh
crates/app/: Cargo.toml
crates/app/src/: db.rs  main.rs  pdf_to_images.rs  progress.rs  utils.rs  video_exts.rs  web.rs
crates/matching/: Cargo.toml
crates/matching-opencv/: Cargo.toml
crates/matching-opencv/src/: feature_extractor.rs  flann.rs  image_utils.rs  lib.rs  video_capture.rs
crates/matching-rustcv/: dependencies.txt
crates/matching/src/: lib.rs  progress.rs
crates/pdftocairo/: Cargo.toml
crates/pdftocairo/src/: lib.rs  pdf_info.rs  pdftocairo.rs
data/video/: README.md
migrations/: 20210309093718_setup.sql
src/: checked_path.rs  db.rs  flann.rs  image_utils.rs  main.rs  main2.rs  migrations2.rs  utils.rs  video_capture.rs  video_exts.rs
src/matching/: mod.rs
src/matching/opencv/: feature_extractor.rs  flann.rs  image_utils.rs  mod.rs
src/matching/rustcv/: ffmpeg.rs
webview/: .gitignore  .prettierrc.json  main.tsconfig.json  package.json  webpack.config.ts
webview/src/: index.tsx  style.scss
webview/src/components/: App.tsx  MainView.tsx  PdfViewer.tsx  VideoPlayer.tsx
webview/src/model/: index.ts
webview/src/viewer/: contract.ts  index.ts  style.scss
