[package]
name = "slide-synchronizer"
version = "0.1.0"
authors = ["Henning Dieterichs <henning.dieterichs@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.49"
base64 = "0.13.0"
glob = "0.3.0"
sha2 = "0.9.3"
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
