[package]
name = "slide-synchronizer"
version = "0.1.0"
authors = ["Henning Dieterichs <henning.dieterichs@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.49"
base64 = "0.13.0"
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
anyhow = "1.0.38"
sha2 = "0.9.3"
sqlx = { version = "0.5.1", features = [ "sqlite", "runtime-async-std-rustls", "migrate" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
thiserror = "1.0"
